--- a/app/src/main/res/values-el-rGR/strings.xml
+++ b/app/src/main/res/values-el-rGR/strings.xml
@@ -16,4 +16,71 @@
     <string name="button_send_vemail">Πατήστε εδώ για να σας σταλεί email επιβεβαίωσης.</string>
     <string name="button_have_vemail">πατήστες εδώ αν λάβει ήδη email επιβεβαίωσης</string>
     <string name="lan_change">ENGLISH</string>
+    <string name="cart_empty">το καλάθι σας είναι άδειο</string>
+    <string name="please_login">Παρακαλώ συνδεθείτε</string>
+    <string name="title_activity_maps">Χάρτης</string>
+    <string name="order">παραγγελία</string>
+    <string name="the_item">Το προϊόν</string>
+    <string name="is_not_available">" δεν είναι πια διαθέσιμο"</string>
+    <string name="the_items">Τα προϊόντα</string>
+    <string name="are_not_available">δεν είναι πια διαθέσιμα</string>
+    <string name="set_quantity">Δώστε ποσότητα</string>
+    <string name="set_price">Δώστε τιμή</string>
+    <string name="email_is_required">Το email απαιτείται</string>
+    <string name="email_instructions">Οδηγίες για την αλλαγή του κωδικού στάθηκαν στο</string>
+    <string name="doesnt_exist">" δεν υπάρχει"</string>
+    <string name="name_is_required">Απαιτείται όνομα</string>
+    <string name="name_is_wrong">Το όνομα είναι λάθος</string>
+    <string name="ccname_is_required">Απαιτείται αριθμός κάρτας</string>
+    <string name="ccnumber_is_wrong">Ο αριθμός της κάρτας δεν είναι έγκυρος</string>
+    <string name="exp_date_required">Απαιτείται ημερομηνία λήξης</string>
+    <string name="cdate_wrong">Η ημερομηνία λήξης είναι λάθος, σωστή μορφή ΜΜ/ΕΕ</string>
+    <string name="card_expired">Η κάρτα έχει λήξει</string>
+    <string name="ccv_required">Απαιτείται CCV</string>
+    <string name="ccv_wrong">Το CCV είναι λάθος</string>
+    <string name="purchase_complete">η αγορά ολοκληρώθηκε</string>
+    <string name="price">τιμή</string>
+    <string name="password_is_required">Απαιτείται κωδικός</string>
+    <string name="wrong_password">λάθος κωδικός</string>
+    <string name="auth_failed">Η επιβεβαίωση των στοιχείων απέτυχε</string>
+    <string name="sign_out">αποσύνεση</string>
+    <string name="supermarket">πολυκατάστημα</string>
+    <string name="sklavenitis">Σκλαβενίτης</string>
+    <string name="vasilopoulos">ΑΒ Βασιλόπουλος</string>
+    <string name="my_location">Η τοποθεσία μου</string>
+    <string name="item">προϊόν</string>
+    <string name="in_supermarket">στο πολυκατάστημα</string>
+    <string name="cant_competed">" Δεν μπορεί να ολοκληρωθεί"</string>
+    <string name="added">προσθέθηκε</string>
+    <string name="deliver">διανομή</string>
+    <string name="rp_is_required">Απατείται η επανάληψη του κωδικού</string>
+    <string name="passwords_not_same">Οι κωδικοί διαφέρουν</string>
+    <string name="signup_success">Η εγγραφή σας ήταν επιτυχής</string>
+    <string name="vemail_sent">Σας έχουμε στείλει email επιβέβαιωσης</string>
+    <string name="total_price">συνολική τιμή</string>
+    <string name="card_name">ΟΝΟΜΑ ΚΑΡΤΑΣ</string>
+    <string name="cc_number">ΑΡΙΘΜΟΣ ΚΑΡΤΑΣ</string>
+    <string name="expire_date">ΗΜΕΡΟΜΗΝΙΑ ΛΗΞΗΣ ΜΜ/ΕΕ</string>
+    <string name="ccv">CCV</string>
+    <string name="finish_order">ΟΛΟΚΛΗΡΩΣΗ ΠΑΡΑΓΓΕΛΙΑΣ</string>
+    <string name="b_set_quantity">ΔΩΣΤΕ ΠΟΣΟΤΗΤΑ</string>
+    <string name="b_set_price">ΔΩΣΤΕ ΤΙΜΗ</string>
+    <string name="quantity">ΠΟΣΟΤΗΤΑ</string>
+    <string name="tprice">ΤΙΜΗ</string>
+    <string name="check_out">Αγορά</string>
+    <string name="search">ΑΝΑΖΗΤΗΣΗ</string>
+    <string name="info">ΠΛΗΡΟΦΟΡΙΕΣ</string>
+    <string name="b_info">Η ποσήτητα υπολογίζεται σε λίτρα για τα υγρά, κιλά για τα στερέα και κομμάτια για τα προϊόντα</string>
+    <string name="log_out">ΑΠΟΣΥΝΔΕΣΗ</string>
+    <string name="maps">ΧΑΡΤΕΣ</string>
+    <string name="voice">ΦΩΝΗ</string>
+    <string name="id_speech">ΑΚΟΥΣΤΕ ΤΟ ID ΣΑΣ</string>
+    <string name="remove_from_cart">ΔΙΑΓΡΑΦΗ ΑΠΟ ΤΟ ΚΑΛΑΘΙ</string>
+    <string name="delete_from_database">ΔΙΑΓΡΑΦΗ ΑΠΟ ΤΗ ΒΑΣΗ</string>
+    <string name="add_to_cart">ΠΡΟΣΘΗΚΗ ΣΤΟ ΚΑΛΑΘΙ</string>
+    <string name="categories">Κατηγορίες</string>
+    <string name="add">Πρόσθεση</string>
+    <string name="delete">Διαγραφή</string>
+    <string name="orders">Παραγγελίες</string>
+    <string name="b_log_out">Αποσύνδεση</string>
 </resources>
