--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,74 @@
     <string name="button_have_vemail">"I have already received a verification email"</string>
     <string name="button_language">To Greek</string>
     <string name="lan_change">ΕΛΛΗΝΙΚΑ</string>
+    <string name="please_login">Please LogIn</string>
     <string name="title_activity_maps">Map</string>
+    <string name="order">order</string>
+    <string name="the_item">The item </string>
+    <string name="is_not_available"> is not available anymore.</string>
+    <string name="the_items">The items </string>
+    <string name="are_not_available"> are not available anymore.</string>
+    <string name="cart_empty">your cart is empty</string>
+    <string name="set_quantity">Set quantity</string>
+    <string name="set_price">Set Price</string>
+    <string name="email_is_required">Email is required</string>
+    <string name="email_instructions">"Reset password instructions sent to "</string>
+    <string name="doesnt_exist">" does not exist"</string>
+    <string name="name_is_required">Name is required</string>
+    <string name="name_is_wrong">Name is wrong</string>
+    <string name="ccname_is_required">Card Number is required</string>
+    <string name="ccnumber_is_wrong">Card Number is wrong</string>
+    <string name="exp_date_required">Expiration date is required</string>
+    <string name="cdate_wrong">Card date is wrong, right format MM/YY</string>
+    <string name="card_expired">Card has already expired</string>
+    <string name="ccv_required">CCV is required</string>
+    <string name="ccv_wrong">CCV is wrong</string>
+    <string name="purchase_complete">your purchase was completed</string>
+    <string name="price">price</string>
+    <string name="password_is_required">Password is required</string>
+    <string name="wrong_password">wrong password</string>
+    <string name="auth_failed">Authentication failed</string>
+    <string name="sign_out">sign out</string>
+    <string name="supermarket">supermarket</string>
+    <string name="sklavenitis">Sklavenitis</string>
+    <string name="vasilopoulos">AB Vasilopoulos</string>
+    <string name="my_location">My location</string>
+    <string name="item">item</string>
+    <string name="in_supermarket">in supermarket</string>
+    <string name="cant_competed">" Can't be completed"</string>
+    <string name="added">added!</string>
+    <string name="deliver">deliver</string>
+    <string name="rp_is_required">Repeat password is required</string>
+    <string name="passwords_not_same">Passwords aren\'t same</string>
+    <string name="signup_success">You have signed up successfully</string>
+    <string name="vemail_sent">We have sent you a verification email</string>
+    <string name="total_price">total price</string>
+    <string name="card_name">CARD NAME</string>
+    <string name="cc_number">CREDIT CARD NUMBER</string>
+    <string name="expire_date">EXPIRE DATE MM/YY</string>
+    <string name="ccv">CCV</string>
+    <string name="finish_order">FINISH ORDER</string>
+    <string name="b_set_quantity">SET QUANTITY</string>
+    <string name="b_set_price">SET PRICE</string>
+    <string name="quantity">QUANTITY</string>
+    <string name="tprice">PRICE</string>
+    <string name="check_out">CheckOut</string>
+    <string name="search">SEARCH</string>
+    <string name="info">INFO</string>
+    <string name="b_info">Quantity is calculated in litres for liquids, kgs for solids and pieces for items</string>
+    <string name="log_out">LOG OUT</string>
+    <string name="maps">MAPS</string>
+    <string name="voice">VOICE</string>
+    <string name="id_speech">ID SPEECH</string>
+    <string name="remove_from_cart">REMOVE FROM CART</string>
+    <string name="delete_from_database">DELETE FROM DATABASE</string>
+    <string name="add_to_cart">ADD TO CART</string>
+    <string name="categories">Categories</string>
+    <string name="add">Add</string>
+    <string name="delete">Delete</string>
+    <string name="orders">Orders</string>
+    <string name="b_log_out">LogOut</string>
+
     <string-array name="languages">
         <item>English</item>
         <item>Ελληνικά</item>
